@@ -1,3 +1,8 @@
+2004-10-06  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/legacy/icqt.py:
+	Added better error displaying.
+
 2004-10-05  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/lang.py:
